--- a/style.css
+++ b/style.css
@@ -1,10 +1,4 @@
-a:link, a:visited, a:active {
-    color: white;
-}
 
-a:hover{
-    color: gray;
-}
 
 .no-padding {
     padding-left: 0;
@@ -72,6 +66,17 @@ a:hover{
 .faqTitle{
     color: green;
 }
+
+a.linkedinLink:link { color:black; text-decoration:none; font-weight:normal; }
+a.linkedinLink:visited { color: black; text-decoration:none; font-weight:normal; }
+a.linkedinLink:hover { color:green; text-decoration:underline; font-weight:normal; }
+a.linkedinLink:active { color:black; text-decoration:none; font-weight:normal; }
+
+a.tjLink:link { color:white; text-decoration:none; font-weight:normal; }
+a.tjLink:visited { color:white; text-decoration:none; font-weight:normal; }
+a.tjLink:hover { color:white; text-decoration:underline; font-weight:normal; }
+a.tjLink:active { color:white; text-decoration:none; font-weight:normal; }
+
 
   @media only screen and (max-width: 667px) {
     .bg-img {
